<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/addLasagna2"
            android:layout_width="74dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/design_default_color_error"
            android:hint="@string/addPizza"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toEndOf="@+id/lavaPrice"
            app:layout_constraintTop_toBottomOf="@+id/addLasagna" />

        <TextView
            android:id="@+id/lavaPrice"
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="104dp"
            android:hint="@string/lavaPrice"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/price2" />

        <Button
            android:id="@+id/addLasagna"
            android:layout_width="74dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/design_default_color_error"
            android:hint="@string/addPizza"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toEndOf="@+id/price2"
            app:layout_constraintTop_toBottomOf="@+id/addPizza" />

        <TextView
            android:id="@+id/items"
            android:layout_width="152dp"
            android:layout_height="31dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/Menu"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/items"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pizza"
            android:layout_width="63dp"
            android:layout_height="23dp"
            android:layout_marginTop="16dp"
            android:hint="@string/pizza"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/items" />

        <TextView
            android:id="@+id/lavacake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lavacake"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.015"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="387dp" />

        <TextView
            android:id="@+id/lasagna"
            android:layout_width="187dp"
            android:layout_height="22dp"
            android:hint="@string/lasagna"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="257dp" />

        <TextView
            android:id="@+id/cvc"
            android:layout_width="31dp"
            android:layout_height="20dp"
            android:hint="@string/cvc"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.028"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="874dp" />

        <EditText
            android:id="@+id/cvc_no"
            android:layout_width="56dp"
            android:layout_height="49dp"
            android:layout_marginBottom="80dp"
            android:ems="10"
            android:hint="@string/cvc_no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvc"
            app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/prices"
            android:layout_width="66dp"
            android:layout_height="28dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="68dp"
            android:hint="@string/Prices"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="117dp"
            android:layout_height="41dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/teal_200"
            android:hint="@string/proceed"
            android:onClick="saveBill"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.958"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="118dp"
            android:layout_height="39dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/teal_200"
            android:hint="@android:string/cancel"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.962"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/items"
            android:layout_width="39dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/items"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/prices"
            app:layout_constraintHorizontal_bias="0.168"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="87dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pizza"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <TextView
            android:id="@+id/TextView"
            android:layout_width="67dp"
            android:layout_height="23dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="64dp"
            android:hint="@string/prices1"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/prices" />

        <ImageView
            android:id="@+id/las_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lasagna"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <TextView
            android:id="@+id/price2"
            android:layout_width="65dp"
            android:layout_height="20dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp"
            android:hint="@string/price2"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toEndOf="@+id/las_item"
            app:layout_constraintTop_toBottomOf="@+id/lasagna" />

        <Button
            android:id="@+id/addPizza"
            android:layout_width="74dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/design_default_color_error"
            android:hint="@string/addPizza"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toEndOf="@+id/TextView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lavacake"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>